Fix: Login modal overlay z-index now higher than map

--- a/src/Details/match.css
+++ b/src/Details/match.css
@@ -15,7 +15,7 @@
 }
 
 .ReactModal__Overlay--after-open {
-    z-index: 4;
+    z-index: 401;
 }
 
 .ReactModal__Content {
